@@ -23,8 +23,7 @@
 # The texinfo input is derived from --help output of the programs just
 # built (cobc and cobcrun).  We refer to them in their in-tree built
 # locations, to make sure we're not deriving the documentation from an
-# installed version. Use LD_PRELOAD to make sure we have the matching
-# libcob.
+# installed version. 
 #
 COBC = $(top_builddir)/cobc/cobc$(EXEEXT)
 COBCRUN = $(top_builddir)/bin/cobcrun$(EXEEXT)
@@ -33,10 +32,7 @@ PASSED_OPTIONS = GREP=$(GREP) \
 		 SED=$(SED) \
 		 AWK=$(AWK) \
 		 COBC=$(COBC) \
-		 COBCRUN=$(COBCRUN) \
-		 LD_PRELOAD=$(abs_top_builddir)/libcob/.libs/libcob.so
-# CHECKME: the preload should not be necessary, its libtools task to ensure that
-#          the built programms (the ones above are wrappers) work
+		 COBCRUN=$(COBCRUN)
 
 COBCINFOSH = $(PASSED_OPTIONS) $(top_builddir)/pre-inst-env \
 	$(top_srcdir)/doc/cobcinfo.sh
